# capngraph

./: .gitignore  Cargo.toml  README.md  build.rs  check_grouped.awk  check_unique.awk  group.sh
data/text/: ca-GrQc.txt  ca-GrQc_grouped.txt  ctvm_ca-GrQc.txt
schemas/: ctvm.capnp  graph.capnp
src/: lib.rs
