[package]
authors = ["J David Smith <emallson@atlanis.net>"]
build = "build.rs"
license = "BSD-3-Clause"
name = "capngraph"
version = "0.3.0"

[build-dependencies]
capnpc = "0.7"

[dependencies]
bit-set = "0.4"
capnp = "0.7"
colored = "1.4.1"
docopt = "0.6"
petgraph = "0.4.1"
rustc-serialize = "0.3"
serde = "0.9.12"
serde_derive = "0.9.12"
serde_json = "0.9.9"
